pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  labels:
    app: desdeoapp
    pool: desdeopod
spec:
  containers:
  - name: desdeotests
    image: ""
