service.yaml
apiVersion: v1
kind: Service
metadata:
  name: serve
  labels:
    app: desdeoapp
spec:
  ports:
  - name: 8081-tcp
    port: 8081
    protocol: TCP
    targetPort: 3000
  selector:
    pool: desdeopod
